   specifying the database dump "format" option when the database is named "all".
 * #602: Fix logs that interfere with JSON output by making warnings go to stderr instead of stdout.
 * #622: Fix traceback when include merging configuration files on ARM64.
 * #629: Skip warning about excluded special files when no special files have been excluded.

1.7.5
 * #311: Override PostgreSQL dump/restore commands via configuration options.
 * #604: Fix traceback when a configuration section is present but lacking any options.
 * #607: Clarify documentation examples for include merging and deep merging.
 * #611: Fix "data" consistency check to support "check_last" and consistency "prefix" options.
 * #613: Clarify documentation about multiple repositories and separate configuration files.

1.7.4
 * #596: Fix special file detection erroring when broken symlinks are encountered.
 * #597, #598: Fix regression in which "check" action errored on certain systems ("Cannot determine
   Borg repository ID").

1.7.3
 * #357: Add "break-lock" action for removing any repository and cache locks leftover from Borg
   aborting.
 * #360: To prevent Borg hangs, unconditionally delete stale named pipes before dumping databases.
 * #587: When database hooks are enabled, auto-exclude special files from a "create" action to
   prevent Borg from hanging. You can override/prevent this behavior by explicitly setting the
   "read_special" option to true.
 * #587: Warn when ignoring a configured "read_special" value of false, as true is needed when
   database hooks are enabled.
 * #589: Update sample systemd service file to allow system "idle" (e.g. a video monitor turning
   off) while borgmatic is running.
 * #590: Fix for potential data loss (data not getting backed up) when the "patterns_from" option
   was used with "source_directories" (or the "~/.borgmatic" path existed, which got injected into
   "source_directories" implicitly). The fix is for borgmatic to convert "source_directories" into